<resources>
    <string name="app_name">RxcleanNote</string>

    <string name="recyclerview_no_data">데이터가 존재하지 않습니다.</string>

    <string name="text_enter_a_title">Enter a title</string>

    <string name="detail_note_hint">메모 내용을 입력 해주세요</string>

    <string name="text_search">노트 검색</string>

    <string name="tb_multi_delete_title">선택 삭제</string>

    <!-- Item Menu Note-->
    <string name="item_menu_delete">delete</string>

    <!-- Filter Dialog-->
    <string name="filter_title">Filter option</string>
    <string name="filter_desc">노트를 수정한 날짜를 기준으로 정렬을 선택하세요.</string>
    <string name="radio_btn_desc">내림차순</string>
    <string name="radio_btn_asc">오름차순</string>
    <string name="filter_btn_ok">정렬하기</string>

    <!-- Delete Confirm Dialog -->
    <string name="delete_title">삭제</string>
    <string name="delete_message">메모를 삭제 하시겠습니까?</string>
    <string name="delete_image_message">이미지를 삭제 하시겠습니까?</string>
    <string name="delete_multi_select_message">선택하신 메모를 모두 삭제하시겠습니까?</string>
    <string name="delete_multi_select_empty">선택하신 메모가 없습니다.</string>
    <string name="dialog_ok">네</string>
    <string name="dialog_cancel">아니오</string>


    <!-- Material Dialog -->
    <string name="dialog_title_confirm">Confirm</string>
    <string name="dialog_title_warning">Warn</string>
    <string name="dialog_title_error">Error</string>
    <string name="dialog_title_question">Answer</string>
    <string name="dialog_btn_yes">Yes</string>
    <string name="dialog_btn_no">No</string>
    <string name="dialog_btn_confirm">OK</string>
    <string name="dialog_login">로그인</string>
    <string name="dialog_id_hint">아이디를 입력하세요.</string>
    <string name="dialog_login_retry">로그인 실패 했습니다.</string>
    <string name="dialog_login_input_dismiss">입력이 취소 되었습니다.</string>
    <string name="dialog_new_note">새노트</string>
    <string name="dialog_input_cancel">입력이 취소 되었습니다.</string>
    <string name="dialog_new_note_hint">타이틀 입력 해주세요.</string>

    <!-- Toast Message-->
    <string name="searchErrorMsg">메모를 불러오는데 실패 했습니다.</string>
    <string name="insertErrorMsg">메모를 생성하는데 실패 했습니다.</string>
    <string name="updateSuccessMsg">업데이트 되었습니다.</string>
    <string name="updateErrorMsg">업데이트 실패 하였습니다.</string>
    <string name="deleteSuccessMsg">삭제 되었습니다.</string>
    <string name="deleteErrorMsg">삭제를 실패 하였습니다.</string>
    <string name="deleteCancelMsg">삭제가 취소 되었습니다.</string>

    <!-- Splash -->
    <string name="tv_oval_rxjava">RxJava</string>
    <string name="tv_oval_jet">JetPack</string>
    <string name="tv_oval_clean">Clean Architecture</string>
    <string name="tv_rx">Rx</string>
    <string name="tv_clean_note">CleanNote</string>

    <!-- NoteList -->
    <string name="tv_warning">Wifi Cellular Not Connected</string>


    <!-- DetailEdit Footer -->
    <string name="tv_footer_add">사진 추가하기</string>
    <string name="tv_footer_no_images">첨부된 사진이 존재하지 않습니다.</string>

    <string name="menu_album">앨범</string>
    <string name="menu_camera">카메라</string>
    <string name="menu_link">링크</string>

    <string name="cancel_message">취소 되었습니다.</string>

    <string name="input_link_desc">추가할 링크를 입력해주세요</string>
    <string name="input_link_edit">https://</string>
    <string name="input_confirm">확인</string>
    <string name="input_cancel">취소</string>

    <!-- Detail View -->
    <string name="dv_update_time">업데이트 시간</string>

    <!-- Description -->
    <string name="desc_ic_splash">splash icon</string>
    <string name="desc_nl_fab">new note btn</string>
    <string name="desc_nl_item_delete_img">swipe delete img</string>
    <string name="desc_dv_img">detail view header img</string>
    <string name="desc_dv_empty_image">replace empty ViewPager</string>
    <string name="desc_dv_update_time">update time icon</string>
    <string name="desc_dv_content">content icon</string>
    <string name="desc_ev_img_loading">Edit Image Loading icon</string>

    <string name="desc_state_expanded">expanded</string>
    <string name="desc_state_collapse">collapse</string>
</resources>
