<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="20dp"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/filter_option_title"
        android:text="@string/filter_title"
        android:textStyle="bold"
        android:textSize="@dimen/title_list_item_text_size"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/filter_option_desc"
        app:layout_constraintRight_toRightOf="@+id/filter_option_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/filter_option_desc"
        android:text="@string/filter_desc"
        app:layout_constraintTop_toBottomOf="@+id/filter_option_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/filter_option_desc"
        app:layout_constraintLeft_toLeftOf="@+id/filter_option_desc"
        app:layout_constraintRight_toRightOf="@+id/filter_option_desc"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <RadioButton
            android:id="@+id/radio_btn_desc"
            android:text="@string/radio_btn_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/radio_btn_asc"
            android:text="@string/radio_btn_asc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RadioGroup>

    <Button
        android:id="@+id/filter_btn_ok"
        android:text="@string/filter_btn_ok"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/radio_group"
        app:layout_constraintLeft_toLeftOf="@+id/radio_group"
        app:layout_constraintRight_toRightOf="@+id/radio_group"
        />

</androidx.constraintlayout.widget.ConstraintLayout>