<layout>
    <androidx.constraintlayout.motion.widget.MotionLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/splash_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/fragment_splash_xml_splash_fragment_container_scene">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/android_logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:lottie_rawRes="@raw/android_jetpack"
            app:lottie_speed="5"
        />

        <TextView
            android:id="@+id/tv_rx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_rx"
            android:textSize="@dimen/logo_text"
            android:alpha="0"
            />

        <TextView
            android:id="@+id/tv_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_clean_note"
            android:textSize="@dimen/logo_text"
            android:alpha="0"
            />

        <TextView
            android:id="@+id/tv_oval_rx"
            android:layout_width="@dimen/oval_rx"
            android:layout_height="@dimen/oval_rx"
            android:background="@drawable/bg_oval"
            android:gravity="center"
            android:text="@string/tv_oval_rxjava"
            android:textSize="@dimen/oval_text_sp"
            android:textColor="@color/white"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rxGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.078" />

        <TextView
            android:id="@+id/tv_oval_jet"
            android:layout_width="@dimen/oval_jet"
            android:layout_height="@dimen/oval_jet"
            android:background="@drawable/bg_oval"
            android:gravity="center"
            android:text="@string/tv_oval_jet"
            android:textSize="@dimen/oval_text_sp"
            android:textColor="@color/white"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/jetGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75" />

        <TextView
            android:id="@+id/tv_oval_clean"
            android:layout_width="@dimen/oval_clean"
            android:layout_height="@dimen/oval_clean"
            android:background="@drawable/bg_oval"
            android:gravity="center"
            android:text="@string/tv_oval_clean"
            android:textSize="@dimen/oval_text_sp"
            android:textColor="@color/white"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/cleanGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.41" />

        <View
            android:id="@+id/bottom"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@color/default_grey"/>

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>